--- a/web/WEB-INF/templates/leftsidebar.xhtml
+++ b/web/WEB-INF/templates/leftsidebar.xhtml
@@ -10,13 +10,16 @@
             <h:form styleClass="none">
                     <ul class="nav nav-sidebar">
                         <li>
-                            <h:commandLink value="Login" action="#{control.checkLogin()}"
+                            <h:commandLink value="Login" action="#{navcontrol.checkLogin()}"
                                            rendered="#{!control.isLoggedIn}">
                                 <f:param name="url" value="loggedin" />
                             </h:commandLink>
                         </li>
                         <li>
-                            <h:commandLink value="Products" action="#{navcontrol.browseProducts()}" />
+                            <h:commandLink value="Products" action="#{productController.browseProducts()}" />
+                        </li>
+                        <li>
+                            <h:commandLink value="Add Products" action="#{productController.addProduct()}" />
                         </li>
                         <li>
                             <h:commandLink value="Orders" action="#{control.checkLogin()}"
